--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #a1bd76 none repeat scroll 0%;
+  background: #c1bcf3 none repeat scroll 0%;
 }
 .container {
   margin: 0 auto;
