--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- background: #c1bcf3 none repeat scroll 0%;
+ background: #5ea8e0 none repeat scroll 0%;
 }
 .container {
   margin: 0 auto;
